# blog

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
benches/: my_benchmark.rs
cli/: Cargo.toml
cli/src/: main.rs
sql/: 00-clear.sql  01-init.sql
src/: data.rs  errors.rs  lib.rs  main.rs  models.rs  routes.rs
templates/: base.hbs
