[package]
name = "blog"
version = "0.1.0"
edition = "2021"
default-run = "blog"
[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
handlebars = { version = "6.0.0", features = ["dir_source"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
tower = "0.4.13"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bin]]
name = "blog"

[[bin]]
name = "cli"

[[bench]]
name = "my_benchmark"
harness = false
