[package]
name = "whynotblog"
version = "0.1.2"
description = "A semi-simple blog system using turso."
edition = "2021"
default-run = "whynotblog"
license = "CC0-1.0"
readme = "README.md"
repository = "https://github.com/whynotavailable/blog"
exclude = ["sql/*", "bin/*"]

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
clap = { version = "4.5.13", features = ["derive"] }
config = "0.14.0"
handlebars = { version = "6.0.0", features = ["dir_source"] }
libsql = "0.4.0"
pulldown-cmark = "0.11.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bin]]
name = "whynotblog"

[[bin]]
name = "whynotblog-cli"

[[bench]]
name = "my_benchmark"
harness = false
