[package]
name = "whynotblog"
version = "1.0.0"
description = "A semi-simple blog system using turso."
edition = "2021"
default-run = "whynotblog"
license = "CC0-1.0"
readme = "README.md"
repository = "https://github.com/whynotavailable/blog"
exclude = ["sql/*", "bin/*"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive"] }
config = "0.14.0"
libsql = "0.5.0"
pulldown-cmark = "0.11.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
tower = "0.5.0"

[[bin]]
name = "whynotblog"
